[package]
name = "broxus-util"
description = "A collection of utils used at Broxus"
authors = ["Ivan Kalinin <i.kalinin@dexpa.io>"]
repository = "https://github.com/broxus/broxus-util"
version = "0.1.4"
edition = "2021"
rust-version = "1.60"
license = "MIT"

[dependencies]
base64 = { version = "0.13", optional = true }
config = { version = "0.13.2", default-features = false, features = ["json", "yaml"], optional = true }
errno = { version = "0.2", optional = true }
hex = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }
log = { version = "0.4", optional = true }
log4rs = { version = "1.1.1", optional = true }
public-ip = { version = "0.2", optional = true }
regex = { version = "1.6.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_yaml = { version = "0.9.4", optional = true }
thiserror = { version = "1.0", optional = true }
wasm-bindgen = { version = "0.2", optional = true }

tikv-jemalloc-ctl = { version = "0.5", optional = true }
tikv-jemalloc-sys = { version = "0.5", features = ["unprefixed_malloc_on_supported_platforms", "background_threads"], optional = true }
tikv-jemallocator = { version = "0.5", features = ["unprefixed_malloc_on_supported_platforms", "background_threads"], optional = true }

[dev-dependencies]
bincode = "1.3"
serde_json = "1.0"
tempfile = "3.3"

[features]
default = ["serde", "config", "log4rs"]
serde = ["dep:base64", "dep:hex", "dep:serde"]
config = ["dep:config", "dep:regex", "dep:serde", "dep:thiserror"]
log4rs = ["dep:log4rs", "dep:serde_yaml", "dep:thiserror", "dep:log"]
web = ["dep:js-sys", "dep:wasm-bindgen"]
alloc = ["dep:tikv-jemalloc-sys", "dep:tikv-jemallocator", "dep:log", "dep:errno"]
alloc-profiling = ["alloc", "dep:tikv-jemalloc-ctl", "tikv-jemalloc-sys?/profiling", "tikv-jemallocator?/profiling", "dep:log", "dep:thiserror"]
public-ip = ["dep:public-ip", "dep:thiserror"]

[package.metadata.docs.rs]
all-features = true
